--- a/picker/src/main/res/layout/photo_capture_item.xml
+++ b/picker/src/main/res/layout/photo_capture_item.xml
@@ -18,7 +18,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="?item.placeholder"
+    android:background="?mediaItem.placeholder"
     android:foreground="?selectableItemBackground">
 
     <TextView
