--- a/picker/src/main/res/values/styles.xml
+++ b/picker/src/main/res/values/styles.xml
@@ -28,7 +28,7 @@
         </item>
         <item name="album.emptyView">@drawable/ic_empty_zhihu</item>
         <item name="album.emptyView.textColor">@color/zhihu_album_empty_view</item>
-        <item name="mediaItem.placeholder">@color/zhihu_item_placeholder</item>
+        <item name="item.placeholder">@color/zhihu_item_placeholder</item>
         <item name="page.bg">@color/zhihu_page_bg</item>
         <item name="bottomToolbar.bg">@color/zhihu_bottom_toolbar_bg</item>
         <item name="bottomToolbar.preview.textColor">@color/zhihu_bottom_toolbar_preview</item>
@@ -61,7 +61,7 @@
         </item>
         <item name="album.emptyView">@drawable/ic_empty_dracula</item>
         <item name="album.emptyView.textColor">@color/dracula_album_empty_view</item>
-        <item name="mediaItem.placeholder">@color/dracula_item_placeholder</item>
+        <item name="item.placeholder">@color/dracula_item_placeholder</item>
         <item name="page.bg">@color/dracula_page_bg</item>
         <item name="bottomToolbar.bg">@color/dracula_bottom_toolbar_bg</item>
         <item name="bottomToolbar.preview.textColor">@color/dracula_bottom_toolbar_preview
