--- a/app/src/main/res/layout/activity_typeset_photo.xml
+++ b/app/src/main/res/layout/activity_typeset_photo.xml
@@ -36,6 +36,7 @@
                     android:fitsSystemWindows="true"
                     android:scaleType="centerCrop"
                     app:layout_collapseMode="parallax"
+                    android:src="@drawable/header_lay"
                     app:layout_collapseParallaxMultiplier="0.7" />
 
                 <LinearLayout
