--- a/watertransport/src/main/res/layout/activity_login.xml
+++ b/watertransport/src/main/res/layout/activity_login.xml
@@ -34,8 +34,9 @@
         android:layout_height="match_parent"
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:scrollbars="none"
         android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="80dp">
+        android:paddingTop="40dp">
 
         <LinearLayout
             android:id="@+id/ll_login_view"
