--- a/watertransport/src/main/res/values/styles.xml
+++ b/watertransport/src/main/res/values/styles.xml
@@ -12,6 +12,7 @@
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
     <style name="MainBottomMenuStyle">
         <item name="android:layout_weight">1</item>
         <item name="android:layout_width">0dp</item>
@@ -25,4 +26,14 @@
         <item name="android:textSize">11sp</item>
     </style>
 
+    <style name="TabLayoutStyle" parent="Widget.Design.TabLayout">
+        <item name="tabIndicatorColor">@color/colorPrimary</item>
+        <item name="tabIndicatorHeight">2dp</item>
+        <item name="tabPaddingStart">12dp</item>
+        <item name="tabPaddingEnd">12dp</item>
+        <item name="tabBackground">@android:color/white</item>
+        <item name="tabTextAppearance">?android:attr/textAppearance</item>
+        <item name="tabTextColor">@color/text_hint_color</item>
+        <item name="tabSelectedTextColor">@color/colorPrimary</item>
+    </style>
 </resources>
