--- a/watertransport/src/main/res/values/colors.xml
+++ b/watertransport/src/main/res/values/colors.xml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#03a9f4</color>
-    <color name="colorPrimaryDark">#0288d1</color>
-    <color name="colorAccent">#40c4ff</color>
+    <color name="colorPrimary">#ff368fe9</color>
+    <color name="colorPrimaryDark">#ff1d89ff</color>
+    <color name="colorAccent">#ff368fe9</color>
     <color name="main_menu_text_color_f">#ff1d89ff</color>
     <color name="main_menu_text_color_n">#ffa1a1a1</color>
     <color name="text_hint_color">#ff999999</color>
+    <color name="bg_main">#F4F5F6</color>
+    <color name="divider_line">#ffE6E6E6</color>
+    <color name="text_black_title">#ff333333</color>
+    <color name="text_action">#ff555555</color>
+
 </resources>
