--- a/watertransport/src/main/res/values/styles.xml
+++ b/watertransport/src/main/res/values/styles.xml
@@ -22,7 +22,7 @@
         <item name="android:onClick">clickMainMenu</item>
         <item name="android:focusable">false</item>
         <item name="android:textColor">@color/selector_color_main_text</item>
-        <item name="android:paddingTop">@dimen/normal_margin</item>
+        <item name="android:paddingTop">10dp</item>
         <item name="android:textSize">11sp</item>
     </style>
 
