--- a/watertransport/src/main/res/layout/activity_main.xml
+++ b/watertransport/src/main/res/layout/activity_main.xml
@@ -62,8 +62,8 @@
 
         <View
             android:layout_width="match_parent"
-            android:background="@android:color/darker_gray"
-            android:layout_height="1px" />
+            android:layout_height="1px"
+            android:background="@android:color/darker_gray" />
 
         <LinearLayout
             android:layout_width="match_parent"
