--- a/watertransport/src/main/res/values/styles.xml
+++ b/watertransport/src/main/res/values/styles.xml
@@ -19,10 +19,12 @@
         <item name="android:layout_height">match_parent</item>
         <item name="android:button">@null</item>
         <item name="android:gravity">center</item>
+        <item name="android:drawablePadding">2dp</item>
         <item name="android:onClick">clickMainMenu</item>
         <item name="android:focusable">false</item>
+        <item name="android:paddingTop">12dp</item>
+        <item name="android:paddingBottom">10dp</item>
         <item name="android:textColor">@color/selector_color_main_text</item>
-        <item name="android:paddingTop">10dp</item>
         <item name="android:textSize">11sp</item>
     </style>
 
