--- a/watertransport/src/main/res/layout/activity_main.xml
+++ b/watertransport/src/main/res/layout/activity_main.xml
@@ -6,43 +6,6 @@
     android:layout_height="match_parent"
     tools:context="com.watertransport.MainActivity">
 
-    <android.support.design.widget.AppBarLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
-
-        <RelativeLayout
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            android:orientation="horizontal"
-            app:popupTheme="@style/AppTheme.PopupOverlay">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:text="水路通"
-                android:textColor="@android:color/white"
-                android:textSize="@dimen/text_size_title1" />
-
-            <TextView
-                android:id="@+id/tv_menu"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:gravity="center"
-                android:padding="14dp"
-                android:text="新增"
-                android:textColor="@android:color/white"
-                android:textSize="@dimen/text_size_title2"
-                android:visibility="gone" />
-        </RelativeLayout>
-
-    </android.support.design.widget.AppBarLayout>
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -68,6 +31,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="56dp"
+            android:background="@android:color/white"
             android:orientation="horizontal">
 
             <TextView
