--- a/watertransport/src/main/res/layout/activity_login.xml
+++ b/watertransport/src/main/res/layout/activity_login.xml
@@ -63,7 +63,7 @@
                 android:orientation="vertical">
 
 
-                <EditText
+                <cn.timeface.timekit.ui.edittext.XEditText
                     android:id="@+id/tv_account"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -76,19 +76,20 @@
                     android:padding="12dp"
                     android:singleLine="true"
                     android:textColorHint="#ffbbbbbb"
-                    android:textSize="14sp" />
+                    android:textSize="14sp"
+                    app:x_clearDrawable="@drawable/ic_delete" />
 
 
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
-                    android:background="#E6E6E6"
                     android:layout_marginLeft="@dimen/normal_margin"
                     android:layout_marginRight="@dimen/normal_margin"
-                    android:padding="@dimen/normal_margin"/>
+                    android:background="#E6E6E6"
+                    android:padding="@dimen/normal_margin" />
 
 
-                <EditText
+                <cn.timeface.timekit.ui.edittext.XEditText
                     android:id="@+id/tv_password"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -104,7 +105,8 @@
                     android:padding="12dp"
                     android:singleLine="true"
                     android:textColorHint="#ffbbbbbb"
-                    android:textSize="14sp" />
+                    android:textSize="14sp"
+                    app:x_clearDrawable="@drawable/ic_delete" />
 
             </LinearLayout>
 
