--- a/watertransport/src/main/res/values/dimens.xml
+++ b/watertransport/src/main/res/values/dimens.xml
@@ -6,4 +6,6 @@
     <dimen name="normal_margin">8dp</dimen>
     <dimen name="text_size_title1">18sp</dimen>
     <dimen name="text_size_title2">14sp</dimen>
+    <dimen name="item_height_size">40dp</dimen>
+    <dimen name="large_margin">16dp</dimen>
 </resources>
