--- a/watertransport/src/main/res/layout/activity_add_new_order.xml
+++ b/watertransport/src/main/res/layout/activity_add_new_order.xml
@@ -381,7 +381,7 @@
                 <EditText
                     android:id="@+id/et_contact_user"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_marginLeft="@dimen/normal_margin"
                     android:layout_marginRight="@dimen/large_margin"
                     android:layout_weight="1"
@@ -389,6 +389,8 @@
                     android:gravity="right"
                     android:hint="请输入"
                     android:maxLines="1"
+                    android:paddingBottom="4dp"
+                    android:paddingTop="4dp"
                     android:textColorHint="@color/text_hint_color"
                     android:textSize="@dimen/text_size_title2" />
             </LinearLayout>
@@ -418,15 +420,17 @@
                 <EditText
                     android:id="@+id/et_contact_phone"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_marginLeft="@dimen/normal_margin"
                     android:layout_marginRight="@dimen/large_margin"
                     android:layout_weight="1"
                     android:background="@android:color/white"
-                    android:gravity="right"
+                    android:gravity="right|center_vertical"
                     android:hint="请输入"
                     android:inputType="phone"
                     android:maxLines="1"
+                    android:paddingBottom="4dp"
+                    android:paddingTop="4dp"
                     android:textColorHint="@color/text_hint_color"
                     android:textSize="@dimen/text_size_title2" />
             </LinearLayout>
