--- a/watertransport/src/main/res/layout/fragment_home_page.xml
+++ b/watertransport/src/main/res/layout/fragment_home_page.xml
@@ -35,10 +35,8 @@
                 android:layout_centerVertical="true"
                 android:gravity="center"
                 android:padding="14dp"
-                android:text="新增"
                 android:textColor="@android:color/white"
-                android:textSize="@dimen/text_size_title2"
-                android:visibility="gone" />
+                android:textSize="16sp" />
         </RelativeLayout>
 
     </android.support.design.widget.AppBarLayout>
