--- a/watertransport/src/main/res/values/colors.xml
+++ b/watertransport/src/main/res/values/colors.xml
@@ -10,5 +10,6 @@
     <color name="divider_line">#ffE6E6E6</color>
     <color name="text_black_title">#ff333333</color>
     <color name="text_action">#ff555555</color>
+    <color name="text_light">#ffEF6B24</color>
 
 </resources>
