--- a/watertransport/src/main/res/menu/save.xml
+++ b/watertransport/src/main/res/menu/save.xml
@@ -3,6 +3,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/menu_save"
-        android:title="发布"
+        android:title="保存"
         app:showAsAction="always" />
 </menu>
