--- a/watertransport/src/main/res/layout/activity_add_new_order.xml
+++ b/watertransport/src/main/res/layout/activity_add_new_order.xml
@@ -216,88 +216,95 @@
                     android:textSize="@dimen/text_size_title2" />
             </LinearLayout>
 
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1px"
-                android:layout_marginLeft="@dimen/large_margin"
-                android:layout_marginRight="@dimen/large_margin"
-                android:background="@color/divider_line" />
-
             <LinearLayout
-                android:id="@+id/ll_cargo_start_time"
+                android:id="@+id/ll_boat_time"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/item_height_size"
-                android:background="@android:color/white"
-                android:gravity="center_vertical"
-                android:orientation="horizontal"
-                android:paddingLeft="@dimen/large_margin">
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="起运时间"
-                    android:textColor="@color/text_action"
-                    android:textSize="@dimen/text_size_title2" />
-
-                <TextView
-                    android:id="@+id/et_cargo_start_time"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/normal_margin"
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1px"
+                    android:layout_marginLeft="@dimen/large_margin"
                     android:layout_marginRight="@dimen/large_margin"
-                    android:layout_weight="1"
+                    android:background="@color/divider_line" />
+
+                <LinearLayout
+                    android:id="@+id/ll_cargo_start_time"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/item_height_size"
                     android:background="@android:color/white"
-                    android:gravity="right"
-                    android:textColorHint="@color/text_hint_color"
-                    android:textSize="@dimen/text_size_title2" />
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal"
+                    android:paddingLeft="@dimen/large_margin">
 
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="起运时间"
+                        android:textColor="@color/text_action"
+                        android:textSize="@dimen/text_size_title2" />
+
+                    <TextView
+                        android:id="@+id/et_cargo_start_time"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="@dimen/normal_margin"
+                        android:layout_marginRight="@dimen/large_margin"
+                        android:layout_weight="1"
+                        android:background="@android:color/white"
+                        android:gravity="right"
+                        android:textColorHint="@color/text_hint_color"
+                        android:textSize="@dimen/text_size_title2" />
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="@dimen/large_margin"
+                        android:src="@drawable/ic_select_time" />
+                </LinearLayout>
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1px"
+                    android:layout_marginLeft="@dimen/large_margin"
                     android:layout_marginRight="@dimen/large_margin"
-                    android:src="@drawable/ic_select_time" />
-            </LinearLayout>
+                    android:background="@color/divider_line" />
 
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1px"
-                android:layout_marginLeft="@dimen/large_margin"
-                android:layout_marginRight="@dimen/large_margin"
-                android:background="@color/divider_line" />
-
-            <LinearLayout
-                android:id="@+id/ll_cargo_arrive_time"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/item_height_size"
-                android:background="@android:color/white"
-                android:gravity="center_vertical"
-                android:orientation="horizontal"
-                android:paddingLeft="@dimen/large_margin">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="运达时间"
-                    android:textColor="@color/text_action"
-                    android:textSize="@dimen/text_size_title2" />
-
-                <TextView
-                    android:id="@+id/et_cargo_arrive_time"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/normal_margin"
-                    android:layout_marginRight="@dimen/large_margin"
-                    android:layout_weight="1"
+                <LinearLayout
+                    android:id="@+id/ll_cargo_arrive_time"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/item_height_size"
                     android:background="@android:color/white"
-                    android:gravity="right"
-                    android:textColorHint="@color/text_hint_color"
-                    android:textSize="@dimen/text_size_title2" />
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal"
+                    android:paddingLeft="@dimen/large_margin">
 
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="@dimen/large_margin"
-                    android:src="@drawable/ic_select_time" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="运达时间"
+                        android:textColor="@color/text_action"
+                        android:textSize="@dimen/text_size_title2" />
+
+                    <TextView
+                        android:id="@+id/et_cargo_arrive_time"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="@dimen/normal_margin"
+                        android:layout_marginRight="@dimen/large_margin"
+                        android:layout_weight="1"
+                        android:background="@android:color/white"
+                        android:gravity="right"
+                        android:textColorHint="@color/text_hint_color"
+                        android:textSize="@dimen/text_size_title2" />
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="@dimen/large_margin"
+                        android:src="@drawable/ic_select_time" />
+                </LinearLayout>
             </LinearLayout>
 
             <View
@@ -339,100 +346,107 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/ll_cargo_contacts"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/item_height_size"
-                android:layout_marginTop="@dimen/normal_margin"
-                android:background="@android:color/white"
-                android:gravity="center_vertical"
-                android:orientation="horizontal"
-                android:padding="@dimen/normal_margin">
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/item_height_size"
+                    android:layout_marginTop="@dimen/normal_margin"
+                    android:background="@android:color/white"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal"
+                    android:padding="@dimen/normal_margin">
+
+                    <View
+                        android:layout_width="4dp"
+                        android:layout_height="@dimen/large_margin"
+                        android:layout_marginLeft="@dimen/normal_margin"
+                        android:background="@color/colorPrimary" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="@dimen/normal_margin"
+                        android:text="业务联系人"
+                        android:textColor="@android:color/black"
+                        android:textSize="@dimen/text_size_title2" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/item_height_size"
+                    android:layout_marginTop="@dimen/normal_margin"
+                    android:background="@android:color/white"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal"
+                    android:paddingLeft="@dimen/large_margin">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="联系人"
+                        android:textColor="@color/text_action"
+                        android:textSize="@dimen/text_size_title2" />
+
+                    <EditText
+                        android:id="@+id/et_contact_user"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_marginLeft="@dimen/normal_margin"
+                        android:layout_marginRight="@dimen/large_margin"
+                        android:layout_weight="1"
+                        android:background="@android:color/white"
+                        android:gravity="right"
+                        android:hint="请输入"
+                        android:maxLines="1"
+                        android:paddingBottom="4dp"
+                        android:paddingTop="4dp"
+                        android:textColorHint="@color/text_hint_color"
+                        android:textSize="@dimen/text_size_title2" />
+                </LinearLayout>
 
                 <View
-                    android:layout_width="4dp"
-                    android:layout_height="@dimen/large_margin"
-                    android:layout_marginLeft="@dimen/normal_margin"
-                    android:background="@color/colorPrimary" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/normal_margin"
-                    android:text="业务联系人"
-                    android:textColor="@android:color/black"
-                    android:textSize="@dimen/text_size_title2" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/item_height_size"
-                android:layout_marginTop="@dimen/normal_margin"
-                android:background="@android:color/white"
-                android:gravity="center_vertical"
-                android:orientation="horizontal"
-                android:paddingLeft="@dimen/large_margin">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="联系人"
-                    android:textColor="@color/text_action"
-                    android:textSize="@dimen/text_size_title2" />
-
-                <EditText
-                    android:id="@+id/et_contact_user"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_marginLeft="@dimen/normal_margin"
+                    android:layout_width="match_parent"
+                    android:layout_height="1px"
+                    android:layout_marginLeft="@dimen/large_margin"
                     android:layout_marginRight="@dimen/large_margin"
-                    android:layout_weight="1"
+                    android:background="@color/divider_line" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/item_height_size"
                     android:background="@android:color/white"
-                    android:gravity="right"
-                    android:hint="请输入"
-                    android:maxLines="1"
-                    android:paddingBottom="4dp"
-                    android:paddingTop="4dp"
-                    android:textColorHint="@color/text_hint_color"
-                    android:textSize="@dimen/text_size_title2" />
-            </LinearLayout>
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal"
+                    android:paddingLeft="@dimen/large_margin">
 
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1px"
-                android:layout_marginLeft="@dimen/large_margin"
-                android:layout_marginRight="@dimen/large_margin"
-                android:background="@color/divider_line" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="联系电话"
+                        android:textColor="@color/text_action"
+                        android:textSize="@dimen/text_size_title2" />
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/item_height_size"
-                android:background="@android:color/white"
-                android:gravity="center_vertical"
-                android:orientation="horizontal"
-                android:paddingLeft="@dimen/large_margin">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="联系电话"
-                    android:textColor="@color/text_action"
-                    android:textSize="@dimen/text_size_title2" />
-
-                <EditText
-                    android:id="@+id/et_contact_phone"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_marginLeft="@dimen/normal_margin"
-                    android:layout_marginRight="@dimen/large_margin"
-                    android:layout_weight="1"
-                    android:background="@android:color/white"
-                    android:gravity="right|center_vertical"
-                    android:hint="请输入"
-                    android:inputType="phone"
-                    android:maxLines="1"
-                    android:paddingBottom="4dp"
-                    android:paddingTop="4dp"
-                    android:textColorHint="@color/text_hint_color"
-                    android:textSize="@dimen/text_size_title2" />
+                    <EditText
+                        android:id="@+id/et_contact_phone"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_marginLeft="@dimen/normal_margin"
+                        android:layout_marginRight="@dimen/large_margin"
+                        android:layout_weight="1"
+                        android:background="@android:color/white"
+                        android:gravity="right|center_vertical"
+                        android:hint="请输入"
+                        android:inputType="phone"
+                        android:maxLines="1"
+                        android:paddingBottom="4dp"
+                        android:paddingTop="4dp"
+                        android:textColorHint="@color/text_hint_color"
+                        android:textSize="@dimen/text_size_title2" />
+                </LinearLayout>
             </LinearLayout>
         </LinearLayout>
     </android.support.v4.widget.NestedScrollView>
